# bob

./: .gitignore  README.md  agent.md  cards.py  cover.txt  pyproject.toml  requirements.txt  resume.md  run_mtg.py
bob/: MVP.md  SPEC.md  __main__.py  cli.py  config.py  practice.py
bob/memory/: approval.py  parse.py  schema.py  stm_parse.py  stm_store.py  store.py
bob/models/: openai_client.py
bob/mtg/: PLAYTEST_UI_SPEC.md  __init__.py  decider.py  journal.py  match.py  serialize.py
bob/prompts/: continuity.py  stages.py
bob/tools/: sandbox.py
bob/turbotime/: __init__.py  orchestrator.py  prompts.py  tools.py
bob/turbotime/tooling/: __init__.py  base.py  knowledge.py  news.py  scryfall.py  steam.py
bob/ui/: gradio_app.py
mtg_core/: action_surface.py  actions.py  ai_broker.py  ai_live.py  ai_pregame.py  ai_trace.py  aibase.py  cards.py  cli_base.py  dpg_ui.py  engine.py  game_state.py  player_state.py  spec.md  tui_base.py
mtg_core/data/: cards_phase1.json  decks_phase1.json
tests/: test_memory_substrate.py  test_mtg_decider.py  test_orchestrator_fake_llm.py  test_state_and_logging.py  test_stm_parse.py  test_tool_sandbox.py
